# doable-frontend

./: Dockerfile  README.md  frontend-deploy.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
src/app/: layout.tsx  page.tsx
src/app/cadastro/: page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/entrar/: page.tsx
src/app/login/: page.tsx
src/app/services/: auth.ts
src/app/signup/: page.tsx
src/components/: AuthRedirect.tsx
src/components/ui/: circular-progress.tsx
src/lib/: baseUrls.tsx
src/stores/: task.ts  user.ts
